# 24.1_drf

./: .env.sample  .gitignore  README.md  manage.py  permissions.py  pyproject.toml  requirements.txt  requirements.txt‬
config/: settings.py  urls.py
course/: models.py  tasks.py  urls.py  urls.txt  validators.py
course/migrations/: 0001_initial.py  0002_subscription.py  0003_course_owner_lesson_owner_subscription_course_and_more.py
course/paginators/: course.py  lesson.py
course/serializers/: course.py  lesson.py  subscription.py
course/views/: course.py  lesson.py  subscribtion.py
lms_drf/: apps.py  settings.py  urls.py
payment/: filters.py  models.py  serializers.py  urls.py  views.py
payment/management/commands/: add_data.py
payment/migrations/: 0001_initial.py  0002_initial.py  0003_payment_session.py
tests/: conftest.py  test_lesson_views.py  test_subscription_views.py
users/: models.py  tasks.py  urls.py
users/migrations/: 0001_initial.py
