[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["igorzinoviev08 <zinovievigor08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
Pillow = "^10.1.0"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
djangorestframework-simplejwt = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
